--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@supabase/supabase-js": "^2.39.1",
     "bcryptjs": "^2.4.3",
+    "jimp": "^0.22.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
